--- a/index.html
+++ b/index.html
@@ -1,10 +1,36 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-
+    <title>The Vanise Website</title>
     </head>
 
     <body>
+            <!-- All content goes here -->
+            <div> 
+                <nav>
+        <h1>The Vanise Website</h1>
+                </nav>
+        
+                <main>
+                    <!-- Sidebar section -->
+      <div>
 
-    </body>
+      </div>
+      <img src=https://tinyurl.com/3ffn4nha></main>div>
+      <!-- Content section -->
+      <div>
+        <h2></h2>
+        <p></p>
+        <!-- Interests section -->
+        <div>
+            <h3>Interests</h3>
+            <ul>
+                <li>Thing 1</li>
+                <li>Thing 2</li>
+                <li>Thing 3</li>
+            </ul>
+      </div>
+                </main>
+            </div>
+        </body>
 </html>
