add index.html and css files

--- a/index.html
+++ b/index.html
@@ -1,36 +1,40 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-    <title>The Vanise Website</title>
+        <title> Vanise's Website </title>
+        <link rel="stylesheet" href="style.css">
     </head>
-
     <body>
-            <!-- All content goes here -->
-            <div> 
-                <nav>
-        <h1>The Vanise Website</h1>
-                </nav>
-        
-                <main>
-                    <!-- Sidebar section -->
-      <div>
+          <!--Visable HTML elements go here-->
+        <div id="all-contents">
+            <nav>
+                <h1> Vanise's Website </h1>
+                <ul id="nav-ul">
+                    <li class="nav-li"><a herf="index.html"> All Ab me</a></li>
+                    <li class="nav-li"><a href="portfolio.html"">Portfolio</a></li>
+                </ul>
+            </nav>
+            <main>
+                <!-- Sidebar section-->
+                <div class="sidebar">
+                    <img class="sidebar-img"src="https://tinyurl.com/276ufxkc
+                <div>
+                <--content section-->
+                <div class="content">
+                    <h2> Vanise's Website </h2>
+                    <p> Netflix lover </p>
+                    <!--Intrest section-->
+                    <div id="interests">
+                        <h3>Interests</h3>
+                        <ul>
+                            <li> Partying Outside</li>
+                            <li> Moviess</li>
+                            <li> Pets </li>
+                        </ul>
+                    <div>
+                </div>
+            </main>
+        </div>
+    </body>
 
-      </div>
-      <img src=https://tinyurl.com/3ffn4nha></main>div>
-      <!-- Content section -->
-      <div>
-        <h2></h2>
-        <p></p>
-        <!-- Interests section -->
-        <div>
-            <h3>Interests</h3>
-            <ul>
-                <li>Thing 1</li>
-                <li>Thing 2</li>
-                <li>Thing 3</li>
-            </ul>
-      </div>
-                </main>
-            </div>
-        </body>
-</html>
+
