add portfolio.html file

--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
             <main>
                 <!-- Sidebar section-->
                 <div class="sidebar">
-                    <img class="sidebar-img"src="https://tinyurl.com/276ufxkc
+                    <img class="sidebar-img"src="https://tinyurl.com/46mwze3k">
                 <div>
-                <--content section-->
+                <!--content section-->
                 <div class="content">
                     <h2> Vanise's Website </h2>
-                    <p> Netflix lover </p>
+                    <p>Student at Abramson Sci Academy </p>
                     <!--Intrest section-->
                     <div id="interests">
                         <h3>Interests</h3>
                         <ul>
                             <li> Partying Outside</li>
-                            <li> Moviess</li>
-                            <li> Pets </li>
+                            <li>Going different Places</li>
+                            <li> my friends </li>
                         </ul>
                     <div>
                 </div>
