add portfolio.html file

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html>
+
     <head>
         <title> Vanise's Website </title>
         <link rel="stylesheet" href="style.css">
@@ -9,16 +10,20 @@
         <div id="all-contents">
             <nav>
                 <h1> Vanise's Website </h1>
-                <ul id="nav-ul">
-                    <li class="nav-li"><a herf="index.html"> All Ab me</a></li>
-                    <li class="nav-li"><a href="portfolio.html"">Portfolio</a></li>
+                <ul class="nav-ul">
+                    <li class="nav-li">
+                        <a herf="index.html">Home </a>
+                    </li>
+                    <li class="nav-li">
+                        <a href="portfolio.html"> Portfolio </a>
+                    </li>
                 </ul>
             </nav>
             <main>
                 <!-- Sidebar section-->
                 <div class="sidebar">
-                    <img class="sidebar-img"src="https://tinyurl.com/46mwze3k">
-                <div>
+                    <img class="sidebar-img" src="https://tinyurl.com/46mwze3k">
+                </div>
                 <!--content section-->
                 <div class="content">
                     <h2> Vanise's Website </h2>
@@ -31,10 +36,10 @@
                             <li>Going different Places</li>
                             <li> my friends </li>
                         </ul>
-                    <div>
+                    </div>
                 </div>
             </main>
         </div>
     </body>
-
+</html>
 
